Improves code formatting and linting consistency
Enhances code organization by introducing Prettier configuration and fine-tuning ESLint rules for better code quality and consistency.
Updates dependencies to support the new configuration, including ESLint plugins and Prettier.
Makes minor adjustments to code structure and metadata for improved readability and maintainability.

--- a/.gitignore
+++ b/.gitignore
@@ -41,5 +41,6 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# exclude all on the root that starts with "."
+# Exclude all files in the root directory that start with a period (.) except for the ones that are needed.
 .*
+!.prettierrc
