Enforces standardized coding conventions
The commit enforces the use of standardized coding conventions across the project by introducing an editorconfig file that defines the coding style guidelines.
It also updates the .gitignore file to exclude the newly introduced editorconfig file from being tracked, ensuring consistency in the project's coding style.
This change improves the overall maintainability and readability of the codebase.

--- a/.gitignore
+++ b/.gitignore
@@ -42,5 +42,6 @@ next-env.d.ts
 
 # Exclude all files in the root directory that start with a period (.) except for the ones that are needed.
 .*
-!.prettierrc
+!.editorconfig
 !.env.example
+!.prettierrc
