--- a/package.json
+++ b/package.json
@@ -7,20 +7,56 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
-    "lint:fix": "eslint --fix"
+    "lint:fix": "eslint --fix",
+    "db:generate:dev": "dotenv -e .env.development -- prisma generate --schema src/prisma/schema.prisma",
+    "db:generate:prod": "dotenv -e .env.production -- prisma generate --schema src/prisma/schema.prisma",
+    "db:migrate:dev": "dotenv -e .env.development -- prisma migrate dev --schema src/prisma/schema.prisma",
+    "db:migrate:prod": "dotenv -e .env.production -- prisma migrate deploy --schema src/prisma/schema.prisma",
+    "db:push:dev": "dotenv -e .env.development -- prisma db push --schema src/prisma/schema.prisma",
+    "db:reset:dev": "dotenv -e .env.development -- prisma migrate reset --skip-seed --schema src/prisma/schema.prisma",
+    "db:seed:dev": "dotenv -e .env.development -- prisma db seed --schema src/prisma/schema.prisma",
+    "db:seed:prod": "dotenv -e .env.production -- prisma db seed --schema src/prisma/schema.prisma"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@prisma/client": "^6.16.2",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toggle": "^1.1.10",
+    "@radix-ui/react-toggle-group": "^1.1.11",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/postcss": "^4.1.13",
+    "@tanstack/react-table": "^8.21.3",
+    "bcryptjs": "^3.0.2",
+    "better-auth": "^1.3.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv-cli": "^10.0.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "recharts": "^2.15.4",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "tsx": "^4.20.5",
+    "vaul": "^1.1.2",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
