--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-naming": "^0.1.10",
     "eslint-plugin-prettier": "^5.5.4",
     "prettier": "3.6.2",
     "prisma": "^6.16.2",
