--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "test": "vitest",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
-    "db:generate:dev": "dotenv -e .env.development -- prisma generate --schema src/prisma/schema.prisma",
-    "db:generate:prod": "dotenv -e .env.production -- prisma generate --schema src/prisma/schema.prisma",
-    "db:migrate:dev": "dotenv -e .env.development -- prisma migrate dev --schema src/prisma/schema.prisma",
-    "db:migrate:prod": "dotenv -e .env.production -- prisma migrate deploy --schema src/prisma/schema.prisma",
-    "db:push:dev": "dotenv -e .env.development -- prisma db push --schema src/prisma/schema.prisma",
-    "db:reset:dev": "dotenv -e .env.development -- prisma migrate reset --skip-seed --schema src/prisma/schema.prisma",
-    "db:seed:dev": "dotenv -e .env.development -- prisma db seed --schema src/prisma/schema.prisma",
-    "db:seed:prod": "dotenv -e .env.production -- prisma db seed --schema src/prisma/schema.prisma"
+    "db:generate:dev": "dotenv -e .env.development -- prisma generate --schema prisma/schema.prisma",
+    "db:generate:prod": "dotenv -e .env.production -- prisma generate --schema prisma/schema.prisma",
+    "db:migrate:dev": "dotenv -e .env.development -- prisma migrate dev --schema prisma/schema.prisma",
+    "db:migrate:prod": "dotenv -e .env.production -- prisma migrate deploy --schema prisma/schema.prisma",
+    "db:push:dev": "dotenv -e .env.development -- prisma db push --schema prisma/schema.prisma",
+    "db:reset:dev": "dotenv -e .env.development -- prisma migrate reset --skip-seed --schema prisma/schema.prisma",
+    "db:seed:dev": "dotenv -e .env.development -- prisma db seed --schema prisma/schema.prisma",
+    "db:seed:prod": "dotenv -e .env.production -- prisma db seed --schema prisma/schema.prisma"
   },
   "dependencies": {
     "@prisma/client": "^6.16.2",
