Refines Prisma configuration and updates linting scripts
Centralizes the Prisma schema path within `prisma.config.ts`, enabling the removal of redundant `--schema` arguments from database-related npm scripts.

Integrates `prisma format` into the `lint` and `lint:fix` commands to ensure consistent code formatting.

Removes the unused `eslint-plugin-naming` dependency and cleans up an unused `lucide-react` import and unutilized `ctx` parameters in authentication callbacks.

--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "build": "next build --turbopack",
     "start": "next start",
     "test": "vitest",
-    "lint": "eslint",
-    "lint:fix": "eslint --fix",
-    "db:generate:dev": "dotenv -e .env.development -- prisma generate --schema prisma/schema.prisma",
-    "db:generate:prod": "dotenv -e .env.production -- prisma generate --schema prisma/schema.prisma",
-    "db:migrate:dev": "dotenv -e .env.development -- prisma migrate dev --schema prisma/schema.prisma",
-    "db:migrate:prod": "dotenv -e .env.production -- prisma migrate deploy --schema prisma/schema.prisma",
-    "db:push:dev": "dotenv -e .env.development -- prisma db push --schema prisma/schema.prisma",
-    "db:reset:dev": "dotenv -e .env.development -- prisma migrate reset --skip-seed --schema prisma/schema.prisma",
-    "db:seed:dev": "dotenv -e .env.development -- prisma db seed --schema prisma/schema.prisma",
-    "db:seed:prod": "dotenv -e .env.production -- prisma db seed --schema prisma/schema.prisma"
+    "lint": "prisma format && eslint",
+    "lint:fix": "prisma format && eslint --fix",
+    "db:generate:dev": "dotenv -e .env.development -- prisma generate",
+    "db:generate:prod": "dotenv -e .env.production -- prisma generate",
+    "db:migrate:dev": "dotenv -e .env.development -- prisma migrate dev",
+    "db:migrate:prod": "dotenv -e .env.production -- prisma migrate deploy",
+    "db:push:dev": "dotenv -e .env.development -- prisma db push",
+    "db:reset:dev": "dotenv -e .env.development -- prisma migrate reset --skip-seed",
+    "db:seed:dev": "dotenv -e .env.development -- prisma db seed",
+    "db:seed:prod": "dotenv -e .env.production -- prisma db seed"
   },
   "dependencies": {
     "@prisma/client": "^6.16.2",
@@ -50,7 +50,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-naming": "^0.1.10",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-unicorn": "^61.0.2",
     "jsdom": "^27.0.0",
