--- a/package.json
+++ b/package.json
@@ -3,18 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build --turbopack",
     "start": "next start",
     "test": "vitest",
-    "lint": "eslint",
-    "lint:fix": "eslint --fix"
+    "lint": "prisma format && eslint",
+    "lint:fix": "prisma format && eslint --fix",
+    "db:generate:dev": "dotenv -e .env.development -- prisma generate",
+    "db:generate:prod": "dotenv -e .env.production -- prisma generate",
+    "db:migrate:dev": "dotenv -e .env.development -- prisma migrate dev",
+    "db:migrate:prod": "dotenv -e .env.production -- prisma migrate deploy",
+    "db:push:dev": "dotenv -e .env.development -- prisma db push",
+    "db:reset:dev": "dotenv -e .env.development -- prisma migrate reset --skip-seed",
+    "db:seed:dev": "dotenv -e .env.development -- prisma db seed",
+    "db:seed:prod": "dotenv -e .env.production -- prisma db seed"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.16.2",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-email/render": "^1.3.1",
     "@tailwindcss/postcss": "^4.1.13",
+    "bcryptjs": "^3.0.2",
+    "better-auth": "^1.3.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
@@ -22,8 +37,11 @@
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.63.0",
+    "resend": "^6.1.1",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -33,14 +51,16 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^5.0.3",
+    "dotenv-cli": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-naming": "^0.1.10",
     "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-unicorn": "^61.0.2",
     "jsdom": "^27.0.0",
     "prettier": "3.6.2",
     "prisma": "^6.16.2",
+    "tsx": "^4.20.5",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5",
     "vite-tsconfig-paths": "^5.1.4",
